--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Locatr</string>
+    <string name="search">find an image near you</string>
+
+
 </resources>
